<!--author
 * Assignment #: HW 1
 * activity_main.xml
 * authors: Thurman Bates Jernigan, Arjun Kabballi Srinivasa, Tempestt Swinson
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Weight"
        android:id="@+id/Weight"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15dp"
        />

    <EditText
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:inputType="number"
        android:ems="10"
        android:digits="0123456789"
        android:id="@+id/Weight_value"
        android:hint="Enter Weight"
        android:layout_toRightOf="@id/Weight"
        android:layout_toEndOf="@id/Weight"
        android:layout_alignTop="@id/Weight"
        android:layout_alignBottom="@id/Weight"
        android:gravity="center"
        android:textSize="15dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:text="@string/Gender"
        android:id="@+id/Gender_switch"
        android:textOn="M"
        android:textOff="F"
        android:showText="true"
        android:thumb="@drawable/abc_switch_track_mtrl_alpha"
        android:layout_toRightOf="@id/Weight_value"
        android:layout_alignTop="@id/Weight"
        android:layout_alignBottom="@id/Weight"
        android:textSize="15dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/Save_button"
        android:layout_marginTop="20dp"
        android:layout_below="@id/Weight_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/Save_button"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:id="@+id/radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1oz"
            android:id="@+id/radio_1oz"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio5oz"
            android:id="@+id/radio5oz"
            android:layout_marginLeft="20dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio12oz"
            android:id="@+id/radio12oz"
            android:layout_marginLeft="20dp"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/drink_size"
        android:id="@+id/Drink_size"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/radio_group"
        android:layout_alignBottom="@id/radio_group"
        android:layout_toLeftOf="@id/radio_group"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcoholpercent"
        android:id="@+id/alcohol"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignBottom="@id/alcohol"
        android:layout_toRightOf="@id/Drink_size"
        android:layout_toEndOf="@id/Drink_size"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/add_drink_button"
        android:layout_marginTop="10dp"
        android:id="@+id/add_drink_button"
        android:layout_below="@id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:id="@+id/reset_button"
        android:layout_below="@id/seekBar"
        android:layout_toRightOf="@id/add_drink_button"
        android:layout_toEndOf="@id/add_drink_button"
        android:layout_alignBottom="@id/add_drink_button"
        android:layout_alignTop="@id/add_drink_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcohol_value"
        android:id="@+id/alcohol_value"
        android:layout_above="@id/reset_button"
        android:layout_toRightOf="@id/seekBar"
        android:layout_alignTop="@id/alcohol"
        android:layout_alignBottom="@id/alcohol"
        android:layout_toEndOf="@id/seekBar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentSign"
        android:id="@+id/staticPercentValue"
        android:layout_above="@id/reset_button"
        android:layout_toRightOf="@id/alcohol_value"
        android:layout_alignTop="@id/alcohol"
        android:layout_alignBottom="@id/alcohol"
        android:layout_toEndOf="@id/seekBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bac_level"
        android:id="@+id/bac_level_label"
        android:layout_marginTop="50dp"
        android:layout_below="@id/add_drink_button"
        android:layout_alignRight="@id/add_drink_button"
        android:paddingRight="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initialBacValue"
        android:id="@+id/bac_value"
        android:layout_alignTop="@id/bac_level_label"
        android:layout_alignLeft="@id/reset_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status_label"
        android:id="@+id/your_status"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/alcohol"
        android:layout_toEndOf="@id/alcohol"
        android:layout_alignRight="@id/add_drink_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/statusSafe"
        android:id="@+id/status_value"
        android:layout_alignLeft="@id/bac_value"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/progressBar"
        android:layout_above="@id/your_status"
        android:layout_centerHorizontal="true"
        android:max="25"/>

</RelativeLayout>
